--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_SelfPres" class="LL_img" ></div>
                       <div class="LL_text">
@@ -72,7 +72,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_DigitalFoot" class="LL_img"></div>
                       <div class="LL_text">
@@ -83,7 +83,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_CyberBullying" class="LL_img"></div>
                       <div class="LL_text">
@@ -94,7 +94,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_Presentation" class="LL_img"></div>
                       <div class="LL_text">
@@ -105,7 +105,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_Privacy" class="LL_img"></div>
                       <div class="LL_text">
@@ -116,7 +116,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="long_lesson">
+                  <div class="long_lesson_carousel">
                     <a href="lessons.html">
                       <div id="home_NewsLit" class="LL_img"></div>
                       <div class="LL_text">
