update for unused file

--- a/header.html
+++ b/header.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- THIS IS NOT USED ANYWHERE -->
 <div class="topnav">
   <div id="logoCont">
-    <a id="logo" href="index.html">Social Media TestDrive</a>
+    <a id="logo" href="index.html">Social TestDrive</a>
   </div>
 
   <div id="linksCont">
