several changes - fixed errors in code base - cleaned up code (removed inline styles, unclosed tags, etc.) - visual updates acc to new design - and more

--- a/index.html
+++ b/index.html
@@ -1,171 +1,172 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name='twitter:title' content="Social Media TestDrive">
+    <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
+    <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+    <meta property='og:url' content='https://socialmediatestdrive.org/'>
+    <meta property='og:title' content="Social Media TestDrive">
+    <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
+    <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+    <meta name='twitter:card' content="summary"> -->
 
-          gtag('config', 'UA-145467622-3');
-        </script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <title>TestDrive</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-        <meta name='twitter:card' content="summary">
-        <meta name='twitter:title' content="Social Media TestDrive">
-        <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-        <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-        <meta property='og:url' content='https://socialmediatestdrive.org/'>
-        <meta property='og:title' content="Social Media TestDrive">
-        <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-        <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-        <style>
-          h1 {
-            margin-left:0%;
-          }
-        </style>
-    </head>
-    <body>
-      <div class="customClassTwo">
-        <div id="logoCont">
-          <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">   Social Media TestDrive</a>
-        </div>
-        <div id="linksCont">
-          <a class="customlinks" href="about_us.html"><p>About</p></a>
-          <a class="customlinks" href="lessons.html"><p>Modules</p></a>
-          <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
-          <a class="customlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="customlinks" href="faq.html"><p>FAQs</p><a>
-        </div>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles/style.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700%7COpen+Sans" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-145467622-3');
+    </script>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <title>TestDrive</title>
+</head>
+<body>
+  <div class="customClassTwo">
+    <div id="logoCont">
+      <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
+      <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
+    </div>
+    <div id="linksCont">
+      <a class="customlinks" href="about_us.html"><p>About</p></a>
+      <a class="customlinks" href="lessons.html"><p>Modules</p></a>
+      <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
+      <a class="customlinks" href="for_parents.html"><p>For Parents</p></a>
+      <a class="customlinks" href="faq.html"><p>FAQs</p></a>
+    </div>
+  </div>
+
+   <div id="container">
+    <div class="section1">
+      <div id="intro">
+        <h1>Practice digital literacy through a <span class="gold_accent">social media simulation</span>.</h1>
+        <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
+        <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Modules </button>
       </div>
+      <div>
+        <img id="home_img" src="img/home.png" alt="home graphic">
+      </div>
+    </div>
 
-       <div id="container">
-        <div id="homePage_s1" class="section1">
-          <div class="left_half">
-            <img class="headerPic1" src="img/filler1.png" alt="headerPic">
-          </div>
-          <div class="right_half">
-            <h1>Learn digital citizenship skills through a social media simulation</h1>
-            <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
-            <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View all of our modules </button>
-          </div>
-        </div>
+    <div class="section2">
 
-        <div class="section2">
-
-          <div class="bd-example">
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_SelfPres" class="LL_img" ></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">Is it Private Information?</p>
-                        <p style="color: black; font-size: 120%;">This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
-                      </div>
-                    </a>
+      <div class="bd-example">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_SelfPres" class="LL_img" ></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">Is it Private Information?</p>
+                    <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
                   </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_DigitalFoot" class="LL_img"></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">Shaping Your Digital Footprint</p>
-                        <p style="color: black; font-size: 120%;">This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_CyberBullying" class="LL_img"></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">Upstanding to Cyberbullying</p>
-                        <p style="color: black; font-size: 120%;">This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_Presentation" class="LL_img"></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">Online Identities</p>
-                        <p style="color: black; font-size: 120%;">This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_Privacy" class="LL_img"></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">Social Media Privacy</p>
-                        <p style="color: black; font-size: 120%;">This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="long_lesson_carousel">
-                    <a href="lessons.html">
-                      <div id="home_NewsLit" class="LL_img"></div>
-                      <div class="LL_text">
-                        <p class="lessonBox_title">News in Social Media</p>
-                        <p style="color: black; font-size: 120%;">This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
+                </a>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+            </div>
+            <div class="carousel-item">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_DigitalFoot" class="LL_img"></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">Shaping Your Digital Footprint</p>
+                    <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_CyberBullying" class="LL_img"></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">Upstanding to Cyberbullying</p>
+                    <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_Presentation" class="LL_img"></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">Online Identities</p>
+                    <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_Privacy" class="LL_img"></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">Social Media Privacy</p>
+                    <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="long_lesson_carousel">
+                <a href="lessons.html">
+                  <div id="home_NewsLit" class="LL_img"></div>
+                  <div class="LL_text">
+                    <p class="lessonBox_title">News in Social Media</p>
+                    <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="customClass">
-        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
-        <div class="footCont_links">
-          <a class="footerlinks" href="terms.html"><p>Terms & Copyright</p><a>
-          <a class="footerlinks" href="faq.html"><p>FAQs</p><a>
-          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
-          <a class="footerlinks" href="lessons.html"><p>Modules</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About</p></a>
-        </div>
-      </div>
+  <div class="customClass">
+    <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p></a></div>
+    <div class="footCont_links">
+      <a class="footerlinks" href="terms.html"><p>Terms & Copyright</p></a>
+      <a class="footerlinks" href="faq.html"><p>FAQs</p></a>
+      <!-- <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
+      <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
+      <a class="footerlinks" href="lessons.html"><p>Modules</p></a>
+      <a class="footerlinks" href="about_us.html"><p>About</p></a> -->
+    </div>
+  </div>
 
 
 
-      <!--<script src="nav.js"></script>-->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
+  <!--<script src="nav.js"></script>-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
