organized styles folder

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name='twitter:card' content="summary"> -->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700%7COpen+Sans" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
