fixing navbar, header.css, small style changes & code improvements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700%7COpen+Sans" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -31,12 +32,12 @@
     <title>TestDrive</title>
 </head>
 <body>
-  <div class="customClassTwo">
+  <div class="header-container">
     <div id="logoCont">
       <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
-    <div id="linksCont">
+    <div class="navbar-container">
       <a class="customlinks" href="about_us.html"><p>About</p></a>
       <a class="customlinks" href="lessons.html"><p>Modules</p></a>
       <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
