more header.css fixes, navbar code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700%7COpen+Sans" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
@@ -38,11 +37,11 @@
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
-      <a class="customlinks" href="about_us.html"><p>About</p></a>
-      <a class="customlinks" href="lessons.html"><p>Modules</p></a>
-      <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
-      <a class="customlinks" href="for_parents.html"><p>For Parents</p></a>
-      <a class="customlinks" href="faq.html"><p>FAQs</p></a>
+      <a class="navbar-links" href="about_us.html"><p>About</p></a>
+      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+      <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
+      <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
+      <a class="navbar-links" href="faq.html"><p>FAQs</p></a>
     </div>
   </div>
 
