--- a/about.html
+++ b/about.html
@@ -15,14 +15,11 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-        <meta name='twitter:card' content="summary">
-        <meta name='twitter:title' content="Social Media TestDrive">
-        <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-        <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-        <meta property='og:url' content='https://socialmediatestdrive.org/about_us.html'>
-        <meta property='og:title' content="Social Media TestDrive">
-        <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-        <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+        <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
+        <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
     </head>
     <body>
       <div id="topNav"></div>
