fixing index page styles, fixed navbar, added more to section2, carousel

--- a/header.html
+++ b/header.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <!-- THIS IS NOT USED ANYWHERE -->
-<div class="topnav">
+<!-- <div class="topnav">
   <div id="logoCont">
     <a id="logo" href="index.html">Social TestDrive</a>
   </div>
 
   <div id="linksCont">
-    <a class="links" href="html/about_us.html"><p>About</p></a>
+    <a class="links" href="html/about.html"><p>About</p></a>
     <a class="links" href="html/lessons.html"><p>Modules</p></a>
     <a class="links" href="html/for_educators.html"><p>For Educators</p></a>
     <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
     <a class="links" href="html/faq.html"><p>FAQs</p><a>
+  </div>
+</div> -->
+
+<div class="header-container">
+  <div id="logoCont">
+    <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
+    <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
+  </div>
+  <div class="navbar-container">
+    <a class="navbar-links" href="about.html"><p>About</p></a>
+    <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+    <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
+    <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
+    <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
   </div>
 </div>
