--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
     <title>TestDrive</title>
 </head>
 <body>
+  <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <div class="header-container">
     <div id="logoCont">
       <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
-      <a class="navbar-links" href="about_us.html"><p>About</p></a>
+      <a class="navbar-links" href="about.html"><p>About</p></a>
       <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
-      <a class="navbar-links" href="faq.html"><p>FAQs</p></a>
+      <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
   </div>
 
@@ -52,25 +53,51 @@
         <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
         <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Modules </button>
       </div>
-      <div>
+      <div id="home_graphic">
         <img id="home_img" src="img/home.png" alt="home graphic">
       </div>
     </div>
 
     <div class="section2">
-
-      <div class="bd-example">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <h1>Learn Essential Skills</h1>
+      <h2 id="modulePromo">Our modules are designed to teach youth about skills for entering
+      social media. Check out a few below!</h2>
+        <div id="moduleCarousel" class="carousel slide">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+            <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
+            <li data-target="#moduleCarousel" data-slide-to="2" class="active"></li>
+            <li data-target="#moduleCarousel" data-slide-to="3" class="active"></li>
+            <li data-target="#moduleCarousel" data-slide-to="4" class="active"></li>
+            <li data-target="#moduleCarousel" data-slide-to="5" class="active"></li>
           </ol>
+
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <!-- zero -->
+            <div class="active item">
+              <div class="carousel-caption">
+              </div>
+            </div>
+            <!-- one -->
+            <div class="item">
+            </div>
+            <!-- two -->
+            <div class="item">
+            </div>
+            <!-- three -->
+            <div class="item">
+            </div>
+            <!-- four -->
+            <div class="item">
+            </div>
+            <!-- five -->
+            <div class="item">
+            </div>
+          </div>
+        </div>
+        <!-- <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="item active">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_SelfPres" class="LL_img" ></div>
@@ -81,7 +108,7 @@
                 </a>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="item">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_DigitalFoot" class="LL_img"></div>
@@ -92,7 +119,7 @@
                 </a>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="item">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_CyberBullying" class="LL_img"></div>
@@ -103,7 +130,7 @@
                 </a>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="item">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_Presentation" class="LL_img"></div>
@@ -114,7 +141,7 @@
                 </a>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="item">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_Privacy" class="LL_img"></div>
@@ -125,7 +152,7 @@
                 </a>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="item">
               <div class="long_lesson_carousel">
                 <a href="lessons.html">
                   <div id="home_NewsLit" class="LL_img"></div>
@@ -137,16 +164,15 @@
               </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#moduleCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#moduleCarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        </div>
-      </div>
+        </div> -->
     </div>
   </div>
 
@@ -158,7 +184,7 @@
       <!-- <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
       <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
       <a class="footerlinks" href="lessons.html"><p>Modules</p></a>
-      <a class="footerlinks" href="about_us.html"><p>About</p></a> -->
+      <a class="footerlinks" href="about.html"><p>About</p></a> -->
     </div>
   </div>
 
