fixes to carousel

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1>Learn Essential Skills</h1>
       <h2 id="modulePromo">Our modules are designed to teach youth about skills for entering
       social media. Check out a few below!</h2>
-        <div id="moduleCarousel" class="carousel slide">
+        <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
@@ -74,34 +74,41 @@
 
           <div class="carousel-inner">
             <!-- zero -->
-            <div class="active item">
-              <div class="carousel-caption">
+            <div class="carousel-item active">
+              <div class="carousel-content-container">
+                <a href="lessons.html">
+                  <div class="carousel-text">
+                    <p class="lessonBox_title">Is it Private Information?</p>
+                    <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
+                  </div>
+                  <div id="home_SelfPres" class="LL_img" ></div>
+                </a>
               </div>
             </div>
             <!-- one -->
-            <div class="item">
+            <div class="carousel-item">
             </div>
             <!-- two -->
-            <div class="item">
+            <div class="carousel-item">
             </div>
             <!-- three -->
-            <div class="item">
+            <div class="carousel-item">
             </div>
             <!-- four -->
-            <div class="item">
+            <div class="carousel-item">
             </div>
             <!-- five -->
-            <div class="item">
+            <div class="carousel-item">
             </div>
           </div>
         </div>
-        <!-- <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
+        <!--
+
             <div class="item active">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_SelfPres" class="LL_img" ></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">Is it Private Information?</p>
                     <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
                   </div>
@@ -109,10 +116,10 @@
               </div>
             </div>
             <div class="item">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_DigitalFoot" class="LL_img"></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">Shaping Your Digital Footprint</p>
                     <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
                   </div>
@@ -120,10 +127,10 @@
               </div>
             </div>
             <div class="item">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_CyberBullying" class="LL_img"></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">Upstanding to Cyberbullying</p>
                     <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
                   </div>
@@ -131,10 +138,10 @@
               </div>
             </div>
             <div class="item">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_Presentation" class="LL_img"></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">Online Identities</p>
                     <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
                   </div>
@@ -142,10 +149,10 @@
               </div>
             </div>
             <div class="item">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_Privacy" class="LL_img"></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">Social Media Privacy</p>
                     <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
                   </div>
@@ -153,10 +160,10 @@
               </div>
             </div>
             <div class="item">
-              <div class="long_lesson_carousel">
+              <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div id="home_NewsLit" class="LL_img"></div>
-                  <div class="LL_text">
+                  <div class="carousel-text">
                     <p class="lessonBox_title">News in Social Media</p>
                     <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
                   </div>
